--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root">LAlit</div>
+    <div id="root">Lalit</div>
     
 <!-- <script type="module" src="App2.js">
     
